--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,13 @@
 		<artifactId>reactor-test</artifactId>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+	</dependency>
+
+    
   </dependencies>
-  
    	<build>
    	       <defaultGoal>compile</defaultGoal>
         <plugins>  
